--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.2.5",
     "firebase": "^12.4.0",
     "pinia": "^3.0.3",
     "primeflex": "^4.0.0",
