--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.4.1",
+    "swiper": "^12.0.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
