--- a/package.json
+++ b/package.json
@@ -17,13 +17,12 @@
   },
   "dependencies": {
     "@primeuix/themes": "^1.2.5",
+    "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.1",
     "firebase": "^12.4.0",
     "pinia": "^3.0.3",
-    "primeflex": "^4.0.0",
-    "primeicons": "^7.0.0",
-    "primevue": "^4.4.1",
     "swiper": "^12.0.3",
+    "tailwindcss": "^4.1.17",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
